--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^5.0.0",
     "node-spotify-api": "^1.0.7",
     "request": "^2.83.0",
+    "simple-node-logger": "^0.93.37",
     "twitter": "^1.7.1"
   }
 }
